--- a/transparency-ong/package.json
+++ b/transparency-ong/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
-    "meteor-node-stubs": "^0.4.1"
+    "meteor-node-stubs": "^0.4.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   },
   "meteor": {
     "mainModule": {
@@ -17,5 +19,8 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^16.0.11"
   }
 }
