--- a/transparency-ong/package.json
+++ b/transparency-ong/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.2.0",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-mounter": "^1.2.0"
   },
