--- a/transparency-ong/package.json
+++ b/transparency-ong/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "bcrypt": "^3.0.2",
+    "ethereumjs-tx": "^1.3.7",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
-    "react-mounter": "^1.2.0"
+    "react-mounter": "^1.2.0",
+    "web3": "^1.0.0-beta.37"
   },
   "meteor": {
     "mainModule": {
