--- a/transparency-ong/package.json
+++ b/transparency-ong/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
+    "animejs": "^2.2.0",
     "bcrypt": "^3.0.2",
     "ethereumjs-tx": "^1.3.7",
     "meteor-node-stubs": "^0.4.1",
